--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -51,6 +51,12 @@
         grid-template-areas: "nav social"
                              "brand brand";
         grid-template-columns: repeat(2, 1fr);
+        row-gap: var(--space-2);
+
+        .nav,
+        .social{
+            padding: 0 var(--space-2-xx);
+        }
         
 
         .brand{
@@ -59,10 +65,12 @@
 
         .social{
             grid-area: social;
+            @include flex(fe, c, row);
         }
 
         .nav{
             grid-area: nav;
+            text-align: left;
         }
     }
 }
